<resources>
    <string name="app_name">UILogin</string>
    <string name="bank_sephor">BANK SEPHORA</string>
    <string name="silahkan_ma">Silahkan masukkan username dan password terdaftar Anda untuk melakukan login</string>
    <string name="login">Login</string>
    <string name="button">Lupa Username / Password ?</string>
    <string name="pt_bank_sep">PT Bank Sephora Indonesia ("Bank Sephora") telah berlisensi oleh Bank Indonsia dan diawasi oleh Otoritas Jasa Keuangan (OJK) serta merupakan peserta dari Lembaga Penjamin Simpanan (LPS).</string>
    <string name="username">Username</string>
    <string name="password">Password</string>


</resources>